<resources>
    <string name="app_name">MyVC</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="main_title">Welcome To MyVC</string>
    <string name="login_no_account">
        I don\'t have an account. <font color="#FF0E90E1"><b>Register</b></font>
    </string>
    <string name="register_have_account">
        I already have an account. <font color="#FF0E90E1"><b>Login</b></font>
    </string>
    <string name="register_title">REGISTER</string>
    <string name="username_heading">Username</string>
    <string name="email_heading">Email</string>
    <string name="password_heading">Password</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="login_title">LOGIN</string>
    <string name="role_heading">Role</string>
    <string name="role">e.g. Admin, Lecturer or Student</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="send_announcements">Send Announcements</string>
    <string name="assist_students">Assist Students</string>
    <string name="communicate">Communicate</string>
    <string name="home">Home</string>
    <string name="balance_marks">Balance Marks</string>
    <string name="monitor_workload">Monitor Workload</string>
    <string name="set_reminders">Set Reminders</string>
    <string name="generate_reports">Generate reports</string>
    <string name="manage_scheduling">Manage Scheduling</string>
    <string name="access_learning">Access Learning</string>
    <string name="view_marks">View Marks</string>
    <string name="raise_query">Raise Query</string>
    <string name="submit">Submit</string>
    <string name="admin">ADMIN</string>
    <string name="student">STUDENT</string>
    <string name="lecturer">LECTURER</string>
    <string name="grade_assessment">Grade Assessment</string>
    <string name="submit_complaints">Submit Complaints</string>
    <string name="take_register">Take Register</string>
    <string name="update_status">Update Status</string>
    <string name="view_workload">View Workload</string>
    <string name="you_may_proceed_to_logout">You may proceed to logout.</string>
    <string name="logoutBtn">LOGOUT</string>
    <string name="registerAdmin">Register</string>
    <string name="add_a_user">Add a user</string>
    <string name="maintenance_in_progress">Maintenance in progress</string>
    <string name="varsity_college_sandton">Varsity College Sandton</string>
    <string name="track_assessment">Track Assessment</string>
    <string name="assignments">Assignments</string>
    <string name="lecturer_availability">Lecturer Availability</string>
    <string name="marks_and_feedback">Marks and Feedback</string>
    <string name="learning_material">Learning Material</string>
    <string name="queries">Queries</string>
    <string name="class_schedule">Class Schedule</string>
    <string name="announcements">Announcements</string>
    <string name="marks_balance_and_verification">Marks Balance and Verification</string>
    <string name="assessment_and_deadline_reminders">Assessment and Deadline Reminders</string>
    <string name="assessment_reports">Assessment Reports</string>
    <string name="assessment_schedules_and_timetables">Assessment Schedules and Timetables</string>
    <string name="lecturer_workload_process">Lecturer Workload Process</string>
    <string name="assessment_timetables">Assessment Timetables</string>
</resources>